src/app/styles/layout/_footer.scss
// -----------------------------------------------------------------------------
// This file contains all styles related to the footer of the site/application.
// -----------------------------------------------------------------------------
@use 'sass:map';

.footer {
  background-color: $dark-grey-1;
  color: $light-grey-1;
  font-size: 1.4rem;
  font-weight: 300;
  padding: map.get($size, large) 0;

  /// Footer logo box styles
  &__logo-box {
    margin-bottom: map.get($size, x-medium);
  }

  &__logo {
    display: block;
    margin: 0 auto;
    height: map.get($size, largest);
  }

  /// General styles Footer navigation & Copyright section
  &__nav,
  &__copyright {
    padding: 0 map.get($size, normal);
    border-top: 1px solid $dark-grey;
    padding-top: map.get($size, small);
  }

  /// Footer Navigation
  &__list {
    margin-bottom: map.get($size, large);
  }

  &__list-item {
    display: inline-block;
  }

  &__link {
    &:link,
    &:visited {
      background-color: $dark-grey-1;
      display: block;
      padding: 0.4rem map.get($size, smallest);
      display: inline-block;
      text-transform: uppercase;
      transition: all 0.2s;

      &:not(:last-of-type) {
        margin-right: map.get($size, smallest);
      }
    }
    &:hover,
    &:active {
      color: $color-primary;
      background-color: map.get($shadow, small);
      transform: rotate(-4deg) scale(1.1);
      text-decoration: none;
    }
  }

  /// Copyright section
  &__copyright {
    float: right;
    line-height: 1.6;
  }

  &__copyright &__link {
    padding-top: 0;
    padding-bottom: 0;
  }
}

